Updating Description and adding similar chart and git and demo link

--- a/src/description/1.md
+++ b/src/description/1.md
@@ -29,3 +29,7 @@ __Pros__
 __Cons__
 * Occlusion is caused because of overlapping bars (opacity can be used to solve this problem)
 * Ordering of categories for a nominal data can change the interpretation
+
+## Similar Charts/Graphs
+
+### [3D Stacked Bar Chart](./2) [Waterfall Plot](./12)
