--- a/src/description/10.md
+++ b/src/description/10.md
@@ -1,42 +1,39 @@
-Relationship,Geospatial Data
+Comparison,Geospatial Data,Magnitude
 /img/cardImg/10.png
-/img/examples/10/armstrade.png,/img/examples/10/usa-air-routes-google-earth.JPG,/img/examples/10/deckgl.png
-Source: https://armsglobe.chromeexperiments.com/,Source: http://www.barnabu.co.uk/google-earth-complete-us-air-routes/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/arc-layer
-# 3D Flow Map
+/img/examples/10/3D_Bar_on_Flatten_Surface.png,/img/examples/10/7baa46e027455c02faa99b9443256db6.jpg,/img/examples/10/deckgl.png,/img/examples/10/allenkey.gif,/img/examples/10/bar_chart_3d_maps.png
+Source: https://www.originlab.com/index.aspx?go=products/origin/graphing,Source: http://content.time.com/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/geojson-layer,Source: https://eng.uber.com/data-viz-intel/,Source: http://globe.chromeexperiments.com/
+# 3D Bar Chart on Map
 
-Flow Map is simply a combination of a flow diagram or Sankey diagram and a map which visualizes the movement of an object or many different objects from one location to another. If the flow of an object is not a straight line like the migration of the birds it can also be seen as a combination 3D contour and a map.
+Bar Chart on Map is simply a combination of a bar chart and a map; with the bars placed on the location whose value they represent. Like a bar chart, the height of each bar is scaled to represent a quantitative data. The map could be a map of the world, a country, city or even a spatial map of a room.
 
-If the map used is planar projection then the map should be placed on the __xz plane__.
+If the map used is planar projection then the map should be placed on the __xz plane__ i.e. the floor and the bars should rise on the __y axes__.
 
 ## Input
 
-Source | Destination 
+Location / Country | Value 
 :-------------:| :-----:|  
-Source 1 | Destination 1 
-Source 2 | Destination 2 
-Source 3 | Destination 3 
-Source 4 | Destination 4 
+Location 1 | 8 
+Location 2 | 20 
+Location 3 | 32 
+Location 4 | 44 
 
-## Visualization of Additional Datatype in Flow Map
-
-* __Stroke width__ or __width__ of the flow can be used to display a how much of object is transferred
-* __Colour__ of the flow can be used to display a categorical data of the flow; for example, colour can be used to visualize if a flow is an inflow or outflow
-* __Height__ of the flow can be used to visualize addition data; for example, while visualizing the flow of flights, we can visualize the actual flying height of the flights using the height of the flow
-
-## Pros and Cons of 3D Bar Chart
+## Pros and Cons of 3D Bar Chart on Map
 
 __Pros__
-* Easy to identify relationships between different geographical regions
-* Good to identify high density and low-density zones
+* It is a great tool to combine geospatial data with quantitative data
+* In VR the user can walk around on the map and because of infinitely big canvas size the map could be of a very large size
+* In case of the map of the room actual dimensions can be used
 
 __Cons__
-* Flows can overlap and increase clutter
-* While using a globe the height of the flow is harder to compare
-
-## Interactivity in VR to Enhance the Information
-
-* Instead of width, __animation__ can be used to visualize the how much of object is transferred; faster the animation more objects are transferred (this can help to reduce the clutter on the map)
+* Maps get hidden if there is a high density of bars
+* Smaller countries and bars can be hidden behind larger bars
+* If the map used is a globe; it gets harder to compare the height of the bars coming out of the bars
 
 ## Variations
 
-* 3D Contour Map (combination of 3D contour and map can be used for example to show movements in birds in the air)
+* Choropleth map with bars chart
+* Map with stacked bar chart
+
+## Similar Charts/Graphs
+
+### [3D Bar Chart](./1) [3D Stacked Bar Chart](./2) [3D Flow Map](./11)
