--- a/src/description/11.md
+++ b/src/description/11.md
@@ -1,26 +1,46 @@
-Patterns,Comparison,Trend Over Time
+Relationship,Geospatial Data
 /img/cardImg/11.png
-/img/examples/11/download.jpeg,/img/examples/11/sys6wtf.gif,/img/examples/11/Choe_as_3D_Waterfall_500px.gif,/img/examples/11/Waterfall-plot-of-r-a-e-k-of-the-4-4-silicene-overlayer-on-Ag111-at-11-k.png
-Source: https://www.originlab.com/doc/Tutorials/2D-Waterfall,Source: http://www.speakerbuilding.com/content/1009/page_7.php,Source: https://www.originlab.com/www/products/GraphGallery.aspx?GID=86,Source: https://www.researchgate.net/publication/271603202_Electronic_Structure_of_the_4_4_Silicene_Monolayer_On_Semi-Infinite_Ag111/figures?lo=1&utm_source=google&utm_medium=organic
-# Waterfall Plot
+/img/examples/11/armstrade.png,/img/examples/11/usa-air-routes-google-earth.JPG,/img/examples/11/deckgl.png
+Source: https://armsglobe.chromeexperiments.com/,Source: http://www.barnabu.co.uk/google-earth-complete-us-air-routes/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/arc-layer
+# 3D Flow Map
 
-Waterfall Plot is a three-dimensional plot in which multiple curves of data are displayed at the same time. Typically waterfall plot is often used to show how two-dimensional information changes over time with the first curve being the most recent one. Instead of time, some other variable can also be used.
+Flow Map is simply a combination of a flow diagram or Sankey diagram and a map which visualizes the movement of an object or many different objects from one location to another. If the flow of an object is not a straight line like the migration of the birds it can also be seen as a combination 3D contour and a map.
 
-_This plot is most commonly and frequently used in spectral and frequency analysis._
+If the map used is planar projection then the map should be placed on the __xz plane__.
 
 ## Input
 
-Serial No. | x1 | x2 | x3 | x4
-| :-------------: |:-------------:| :-----:| :-----:| :-----:|
- 1 | 4 | 8 | 12 | 16
- 2 | 20 | 24 | 28 | 32
- 3 | 36 | 40 | 44 | 48
- 4 | 52 | 56 | 60 | 64
+Source | Destination 
+:-------------:| :-----:|  
+Source 1 | Destination 1 
+Source 2 | Destination 2 
+Source 3 | Destination 3 
+Source 4 | Destination 4 
 
-## Pros and Cons of 3D Contour
+## Visualization of Additional Datatype in Flow Map
+
+* __Stroke width__ or __width__ of the flow can be used to display a how much of object is transferred
+* __Colour__ of the flow can be used to display a categorical data of the flow; for example, colour can be used to visualize if a flow is an inflow or outflow
+* __Height__ of the flow can be used to visualize addition data; for example, while visualizing the flow of flights, we can visualize the actual flying height of the flights using the height of the flow
+
+## Pros and Cons of 3D Flow Map
 
 __Pros__
-* Peaks appear to be side by side which help in identifying interesting spectral values
+* Easy to identify relationships between different geographical regions
+* Good to identify high density and low-density zones
 
 __Cons__
-* The curves in the front masks the ones behind it
+* Flows can overlap and increase clutter
+* While using a globe the height of the flow is harder to compare
+
+## Interactivity in VR to Enhance the Information
+
+* Instead of width, __animation__ can be used to visualize the how much of object is transferred; faster the animation more objects are transferred (this can help to reduce the clutter on the map)
+
+## Variations
+
+* 3D Contour Map (combination of 3D contour and map can be used for example to show movements in birds in the air)
+
+## Similar Charts/Graphs
+
+### [3D Graph Drawing](./9) [3D Bar Chart on Map](./10)
