--- a/src/description/12.md
+++ b/src/description/12.md
@@ -1,24 +1,30 @@
-Conceptual Drawing
+Patterns,Comparison,Trend Over Time
 /img/cardImg/12.png
-/img/examples/12/download1.jpeg,/img/examples/12/download.jpeg,/img/examples/12/HgEnW.jpg,/img/examples/12/maxresdefault.jpg
-Source: https://en.wikipedia.org/wiki/Exploded-view_drawing,Source: http://vis.berkeley.edu/papers/exview3D/,Source: https://i.stack.imgur.com/HgEnW.jpg,Source: https://www.youtube.com/watch?v=UDlQUnXxuV4
-# Exploded View Drawing
+/img/examples/12/download.jpeg,/img/examples/12/sys6wtf.gif,/img/examples/12/Choe_as_3D_Waterfall_500px.gif,/img/examples/12/Waterfall-plot-of-r-a-e-k-of-the-4-4-silicene-overlayer-on-Ag111-at-11-k.png
+Source: https://www.originlab.com/doc/Tutorials/2D-Waterfall,Source: http://www.speakerbuilding.com/content/1009/page_7.php,Source: https://www.originlab.com/www/products/GraphGallery.aspx?GID=86,Source: https://www.researchgate.net/publication/271603202_Electronic_Structure_of_the_4_4_Silicene_Monolayer_On_Semi-Infinite_Ag111/figures?lo=1&utm_source=google&utm_medium=organic
+# Waterfall Plot
 
-Exploded view drawing is a diagram, picture, schematic or technical drawing of an object, that shows all its internal parts. It also shows the relationship between these part and how they are assembled. It shows the components of an object suspended in space with distances between each component.
+Waterfall Plot is a three-dimensional plot in which multiple curves of data are displayed at the same time. Typically waterfall plot is often used to show how two-dimensional information changes over time with the first curve being the most recent one. Instead of time, some other variable can also be used.
 
-This type of visualizations can be used in designing machines, automobiles, spaceships etc. It can also be used to teach people how to assemble an object.
+_This plot is most commonly and frequently used in spectral and frequency analysis._
 
-## Pros and Cons of 3D Bar Chart
+## Input
+
+Serial No. | x1 | x2 | x3 | x4
+| :-------------: |:-------------:| :-----:| :-----:| :-----:|
+ 1 | 4 | 8 | 12 | 16
+ 2 | 20 | 24 | 28 | 32
+ 3 | 36 | 40 | 44 | 48
+ 4 | 52 | 56 | 60 | 64
+
+## Pros and Cons of Waterfall Plot
 
 __Pros__
-* Easy to understand as it shows an actual 3D structure of the object
-* Good tool for design physical object and teaching people assembly of objects
+* Peaks appear to be side by side which help in identifying interesting spectral values
 
 __Cons__
-* Lots of efforts required for implementation as all the components that need to be visualized need to have a 3D object designed for it
-* Non-scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
+* The curves in the front masks the ones behind it
 
-## Interactivity in VR to Enhance the Information
+## Similar Charts/Graphs
 
-* Ability to increase and decrease the spacing between component can help in comparing the sizes in the diagram 
-* Ability to select a particular component and zoom and rotate it can make the drawing more interactive and readable
+[3D Bar Chart](./1)
