--- a/src/description/13.md
+++ b/src/description/13.md
@@ -1,22 +1,28 @@
 Conceptual Drawing
 /img/cardImg/13.png
-/img/examples/13/F-35B_cutaway_with_LiftFan.jpg,/img/examples/13/2944f5bade4b5af1aed64278d9d4db3f.jpg,/img/examples/13/01.jpg
-Source: https://commons.wikimedia.org/wiki/File:F-35B_cutaway_with_LiftFan.jpg,Source: https://i.pinimg.com/originals/29/44/f5/2944f5bade4b5af1aed64278d9d4db3f.jpg,Source: https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-8-389
-# Cutaway Drawing
+/img/examples/13/download1.jpeg,/img/examples/13/download.jpeg,/img/examples/13/HgEnW.jpg,/img/examples/13/maxresdefault.jpg
+Source: https://en.wikipedia.org/wiki/Exploded-view_drawing,Source: http://vis.berkeley.edu/papers/exview3D/,Source: https://i.stack.imgur.com/HgEnW.jpg,Source: https://www.youtube.com/watch?v=UDlQUnXxuV4
+# Exploded View Drawing
 
-Cutaway drawing is a 3D graphics in which a part of the surface element of a 3D model is selectively removed, to make internal features visible. The purpose of a cutaway drawing is to allow the viewer to have a look inside an otherwise solid opaque object. This has been traditionally used in engineering drawings. But recently in 3D visualization, one of the main application of cutaway drawing have been medical imaging, where doctors user 3D models of organs and slice through them to diagnose disease and injuries.
+Exploded view drawing is a diagram, picture, schematic or technical drawing of an object, that shows all its internal parts. It also shows the relationship between these part and how they are assembled. It shows the components of an object suspended in space with distances between each component.
 
-## Pros and Cons of 3D Bar Chart
+This type of visualizations can be used in designing machines, automobiles, spaceships etc. It can also be used to teach people how to assemble an object.
+
+## Pros and Cons of Exploded View Drawing
 
 __Pros__
 * Easy to understand as it shows an actual 3D structure of the object
-* Good tool for examining a physical object
-* Useful application in medical sciences like 3D x-rays, 3D MRI etc.
+* Good tool for design physical object and teaching people assembly of objects
 
 __Cons__
-* Lots of efforts required for implementation as all the component that needs to be visualized need to have a 3D object designed for it
+* Lots of efforts required for implementation as all the components that need to be visualized need to have a 3D object designed for it
 * Non-scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
 
 ## Interactivity in VR to Enhance the Information
 
-* Ability to decide where and how to slice an object can help user look for the information he/she is looking for
+* Ability to increase and decrease the spacing between component can help in comparing the sizes in the diagram 
+* Ability to select a particular component and zoom and rotate it can make the drawing more interactive and readable
+
+## Similar Charts/Graphs
+
+### [Cutaway Drawing](./14)
