--- a/src/description/14.md
+++ b/src/description/14.md
@@ -1,29 +1,26 @@
-Comparison,Magnitude,Part of Whole
+Conceptual Drawing
 /img/cardImg/14.png
-/img/examples/14/2017_Hightlights_3D_Stacked_Bar.png,/img/examples/14/Sample_3D_Stacked_Bars.png
-This is a 3D Stacked Bars plot with bar shape set to Cylinder. The plot tracks emissions of three classes of greenhouse gases; in the countries of France Germany Canada and Japan over the period from 1990 to 2010. Source: https://d2mvzyuse3lwjc.cloudfront.net/images/WikiWeb/Graphing/2017_Hightlights_3D_Stacked_Bar.png?v=6728, Source: https://www.originlab.com/doc/en/UserGuide/images/3D_Stacked_Bars/Sample_3D_Stacked_Bars.png
-# 3D Stacked Bar Chart
+/img/examples/14/F-35B_cutaway_with_LiftFan.jpg,/img/examples/14/2944f5bade4b5af1aed64278d9d4db3f.jpg,/img/examples/14/01.jpg
+Source: https://commons.wikimedia.org/wiki/File:F-35B_cutaway_with_LiftFan.jpg,Source: https://i.pinimg.com/originals/29/44/f5/2944f5bade4b5af1aed64278d9d4db3f.jpg,Source: https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-8-389
+# Cutaway Drawing
 
-Stacked Bar charts are a variation of bar charts; where bars that represent different data type are stacked on top of each other. The height of the resulting bar shows the combined result of the groups.  _Stacked bar graphs present the information in the same sequence on each bar._
+Cutaway drawing is a 3D graphics in which a part of the surface element of a 3D model is selectively removed, to make internal features visible. The purpose of a cutaway drawing is to allow the viewer to have a look inside an otherwise solid opaque object. This has been traditionally used in engineering drawings. But recently in 3D visualization, one of the main application of cutaway drawing have been medical imaging, where doctors user 3D models of organs and slice through them to diagnose disease and injuries.
 
-## Input
-
-| | Category 1 | Category 2 | Category 3 | Category 4
-| ------------- |:-------------:| :-----:| :-----:| :-----:|
-Category A | `i:`4,`j:`4 | `i:`8,`j:`8 | `i:`12,`j:`12 | `i:`16,`j:`16
-Category B | `i:`20,`j:`20 | `i:`24,`j:`24 | `i:`28,`j:`28 | `i:`32,`j:`32
-Category C | `i:`36,`j:`36 | `i:`40,`j:`40 | `i:`44,`j:`44 | `i:`48,`j:`48
-Category D | `i:`52,`j:`52 | `i:`56,`j:`56 | `i:`60,`j:`60 | `i:`64,`j:`64
-
-## Pros and Cons of 3D Bar Chart
+## Pros and Cons of Cutaway Drawing
 
 __Pros__
-* Gives an overview of the data
-* Easy to understand due to widespread use in business and the media
-* Percentage Distribution for the third data type can easily be seen of a single bar
+* Easy to understand as it shows an actual 3D structure of the object
+* Good tool for examining a physical object
+* Useful application in medical sciences like 3D x-rays, 3D MRI etc.
 
 __Cons__
-* Occlusion is caused because of overlapping bars (opacity can be used to solve this problem)
-* Difficult to compare all but bottom (the first) segment of the bars
-* Becomes more complex when the number of segments increases
-* If not drawn with care the 3D version could look very cluttered
+* Lots of efforts required for implementation as all the component that needs to be visualized need to have a 3D object designed for it
+* Non-scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
+
+## Interactivity in VR to Enhance the Information
+
+* Ability to decide where and how to slice an object can help user look for the information he/she is looking for
+
+## Similar Charts/Graphs
+
+### [Exploded View Drawing](./13)
