--- a/src/description/2.md
+++ b/src/description/2.md
@@ -1,42 +1,33 @@
-Correlation,Distribution
+Comparison,Magnitude,Part of Whole
 /img/cardImg/02.png
-/img/examples/02/ModifySurfacePlotAppearanceExample_02.png,/img/examples/02/contour-and-surface.png,/img/examples/02/surface1_b.png,/img/examples/02/Tutorial_3DSurfaceMap_05.png
-Source: https://se.mathworks.com/help/matlab/ref/surf.html,Source: http://pgfplots.net/tikz/examples/contour-and-surface,Source: http://www.cyber-wit.com/gallery_surface.html#surface,Source: https://www.originlab.com/doc/Tutorials/3D-Colormap-Surface
-# 3D Surface Plot
+/img/examples/02/2017_Hightlights_3D_Stacked_Bar.png,/img/examples/02/Sample_3D_Stacked_Bars.png
+This is a 3D Stacked Bars plot with bar shape set to Cylinder. The plot tracks emissions of three classes of greenhouse gases; in the countries of France Germany Canada and Japan over the period from 1990 to 2010. Source: https://d2mvzyuse3lwjc.cloudfront.net/images/WikiWeb/Graphing/2017_Hightlights_3D_Stacked_Bar.png?v=6728, Source: https://www.originlab.com/doc/en/UserGuide/images/3D_Stacked_Bars/Sample_3D_Stacked_Bars.png
+# 3D Stacked Bar Chart
 
-3D Surface plots are diagrams for 3D data or graph of __y = f(x,z)__ showing a functional relationship between dependent variable __y__, and two independent variables __x__ and __z__. Colour can either be used to visualize __y__ or to visualize another function __w = g(x,z)__ showing a functional relationship between dependent variable __w__, and two independent variables __x__ and __z__.
-
-These plots are useful for viewing the relationship between a dependent and two independent variables. They mostly used in engineering to plot three-dimensional relationship g(x, y, z). Another application can be in education to help students visualize three-dimensional geometry.
+Stacked Bar charts are a variation of bar charts; where bars that represent different data type are stacked on top of each other. The height of the resulting bar shows the combined result of the groups.  _Stacked bar graphs present the information in the same sequence on each bar._
 
 ## Input
 
- x | y | z | 
-:-------------:| :-----:| :-----:| 
-4 | 8 | 12
-16 | 20 | 24
-28 | 32 | 36
-40 | 44 | 48
+| | Category 1 | Category 2 | Category 3 | Category 4
+| ------------- |:-------------:| :-----:| :-----:| :-----:|
+Category A | `i:`4,`j:`4 | `i:`8,`j:`8 | `i:`12,`j:`12 | `i:`16,`j:`16
+Category B | `i:`20,`j:`20 | `i:`24,`j:`24 | `i:`28,`j:`28 | `i:`32,`j:`32
+Category C | `i:`36,`j:`36 | `i:`40,`j:`40 | `i:`44,`j:`44 | `i:`48,`j:`48
+Category D | `i:`52,`j:`52 | `i:`56,`j:`56 | `i:`60,`j:`60 | `i:`64,`j:`64
 
-## Construction of Surface Plot
-
-The construction of surface plot require domains for two independent variables and incremental steps for the independent variables. Then using these domains and incremental step the dependent variable is calculated and the graph is plot using this dataset. For example let __y = sin(x) * cos(z)__. The Domain of __x__ and __z__ is defined as __(0,3.14)__ with an incremental step of __0.1__ (the domain of __x__ and __z__ can be identical or different). Using these domains as input to the function __y__ is calculated for all the combinations of __x__ and __z__ value. Using this triplet of __x, y__ and __z__ the plot is drawn.
-
-## Pros and Cons of 3D Surface Plot
+## Pros and Cons of 3D Bar Chart
 
 __Pros__
-* Really good viewing the relationship between a dependent and two independent variables
-* Can be used to peak and valleys in the function
+* Gives an overview of the data
+* Easy to understand due to widespread use in business and the media
+* Percentage Distribution for the third data type can easily be seen of a single bar
 
 __Cons__
-* Some area of the graph could be hidden behind the peaks in the graph (opacity can be used to solve this problem)
-* Choice of the domain can drastically affect how the graph looks
-* Computationally heavy to implement
+* Occlusion is caused because of overlapping bars (opacity can be used to solve this problem)
+* Difficult to compare all but bottom (the first) segment of the bars
+* Becomes more complex when the number of segments increases
+* If not drawn with care the 3D version could look very cluttered
 
-## Interactivity in VR to Enhance the Information
+## Similar Charts/Graphs
 
-* An option to switch between the solid surface view and wireframe view can help in reducing occlusion problem
-
-## Variations
-
-* 3D surface plot with contours
-* 3D surface plot with heatmap
+### [3D Bar Chart](./1)
