--- a/src/description/3.md
+++ b/src/description/3.md
@@ -1,31 +1,46 @@
-Trends
+Correlation,Distribution
 /img/cardImg/03.png
-/img/examples/03/Create3DContourPlotExample_01.png,/img/examples/03/csm_Kops-FSP-Bericht2a-streamline_50-00_74a85bac27.jpg
-Source: https://se.mathworks.com/help/matlab/ref/contour3.html,Source: http://www.thepinsta.com/fluid-dynamics-valve_4RpEUq4nY%7CzrzWsqpQ23UgfrFIQFubWUlRmpAAJMbNo/
-# 3D Contour
+/img/examples/03/ModifySurfacePlotAppearanceExample_02.png,/img/examples/03/contour-and-surface.png,/img/examples/03/surface1_b.png,/img/examples/03/Tutorial_3DSurfaceMap_05.png
+Source: https://se.mathworks.com/help/matlab/ref/surf.html,Source: http://pgfplots.net/tikz/examples/contour-and-surface,Source: http://www.cyber-wit.com/gallery_surface.html#surface,Source: https://www.originlab.com/doc/Tutorials/3D-Colormap-Surface
+# 3D Surface Plot
 
-3D contour displays a three-dimensional plot of a set of data points connected via a line. This should not be confused with the 2D line graph because in 2D line graph one of the axes is always ordered which is not the case with 3D contour. 
+3D Surface plots are diagrams for 3D data or graph of __y = f(x,z)__ showing a functional relationship between dependent variable __y__, and two independent variables __x__ and __z__. Colour can either be used to visualize __y__ or to visualize another function __w = g(x,z)__ showing a functional relationship between dependent variable __w__, and two independent variables __x__ and __z__.
 
-This can be used to plot a motion of an object in three-dimensional space or can also be used to visualize pathlines or streamline in fluid dynamics like the flow of wind around a plane wing. Multiple lines can be grouped with each other to be compared to one another.
+These plots are useful for viewing the relationship between a dependent and two independent variables. They mostly used in engineering to plot three-dimensional relationship g(x, y, z). Another application can be in education to help students visualize three-dimensional geometry.
 
 ## Input
 
-Serial No. | x | y | z | 
-:-------------:| :-----:| :-----:|:-----:| 
-1 | 4 | 8 | 12
-2 | 16 | 20 | 24
-3 | 28 | 32 | 36
-4 | 40 | 44 | 48
+ x | y | z | 
+:-------------:| :-----:| :-----:| 
+4 | 8 | 12
+16 | 20 | 24
+28 | 32 | 36
+40 | 44 | 48
 
-## Pros and Cons of 3D Contour
+## Construction of Surface Plot
+
+The construction of surface plot require domains for two independent variables and incremental steps for the independent variables. Then using these domains and incremental step the dependent variable is calculated and the graph is plot using this dataset. For example let __y = sin(x) * cos(z)__. The Domain of __x__ and __z__ is defined as __(0,3.14)__ with an incremental step of __0.1__ (the domain of __x__ and __z__ can be identical or different). Using these domains as input to the function __y__ is calculated for all the combinations of __x__ and __z__ value. Using this triplet of __x, y__ and __z__ the plot is drawn.
+
+## Pros and Cons of 3D Surface Plot
 
 __Pros__
-* Motion of an object in 3D space can be easily visualized like the flight of a bird
+* Really good viewing the relationship between a dependent and two independent variables
+* Can be used to peak and valleys in the function
 
 __Cons__
-* Grouping multiple lines can cause clutter and confusion
-* If one of the axes is ordered it could to be harder to interpret which one of the axes is ordered
+* Some area of the graph could be hidden behind the peaks in the graph (opacity can be used to solve this problem)
+* Choice of the domain can drastically affect how the graph looks
+* Computationally heavy to implement
 
 ## Interactivity in VR to Enhance the Information
 
-* Animation can be used to visualize motion in space
+* An option to switch between the solid surface view and wireframe view can help in reducing occlusion problem
+
+## Variations
+
+* 3D surface plot with contours
+* 3D surface plot with heatmap
+
+## Similar Charts/Graphs
+
+### [3D Contour](./4)
