--- a/src/description/4.md
+++ b/src/description/4.md
@@ -1,36 +1,35 @@
-Distribution,Spacial Coordinate
+Trends
 /img/cardImg/04.png
-/img/examples/04/piusa-3d-cave-03.jpg,/img/examples/04/screen-shot-2014-12-14-at-12-26-51-pm.png,/img/examples/04/imagestarmap.png
-Source: https://www.solidsmack.com/3d-cad-technology/scan-your-cave-model-it-in-modo-call-it-a-day/,Source: http://stars.chromeexperiments.com/,Source: http://sci.esa.int/star_mapper/
-# 3D Point Cloud
+/img/examples/04/Create3DContourPlotExample_01.png,/img/examples/04/csm_Kops-FSP-Bericht2a-streamline_50-00_74a85bac27.jpg
+Source: https://se.mathworks.com/help/matlab/ref/contour3.html,Source: http://www.thepinsta.com/fluid-dynamics-valve_4RpEUq4nY%7CzrzWsqpQ23UgfrFIQFubWUlRmpAAJMbNo/
+# 3D Contour
 
-A point cloud is a set of points in a coordinate system; hence 3D point cloud is set of point in a 3D coordinate system. 
+3D contour displays a three-dimensional plot of a set of data points connected via a line. This should not be confused with the 2D line graph because in 2D line graph one of the axes is always ordered which is not the case with 3D contour. 
 
-Traditionally point cloud in a 3D coordinate system has been used to visualize the external surface of an object, but in data visualization, it can also be used to visualize point or position of one or many objects in space.
+This can be used to plot a motion of an object in three-dimensional space or can also be used to visualize pathlines or streamline in fluid dynamics like the flow of wind around a plane wing. Multiple lines can be grouped with each other to be compared to one another.
 
 ## Input
 
- x | y | z | 
-:-------------:| :-----:| :-----:| 
-4 | 8 | 12
-16 | 20 | 24
-28 | 32 | 36
-40 | 44 | 48
+Serial No. | x | y | z | 
+:-------------:| :-----:| :-----:|:-----:| 
+1 | 4 | 8 | 12
+2 | 16 | 20 | 24
+3 | 28 | 32 | 36
+4 | 40 | 44 | 48
 
-## Visualization of Additional Datatype in Point Cloud
-
-* __Size__ of the point can be used to display a quantitative attribute of the object
-* __Colour__ of the point can be used to display an additional quantitative or categorical attribute of the object
-* __3D model__ of the object can be used instead of a point or sphere or random shape
-
-_One of the common application of point cloud in data visualization is for creating a map of stars and planets and to identify their orbits._
-
-## Pros and Cons of 3D Point Cloud
+## Pros and Cons of 3D Contour
 
 __Pros__
-* Easy to understand as position attribute is used to represent the position
-* It is great to identify clusters
+* Motion of an object in 3D space can be easily visualized like the flight of a bird
 
 __Cons__
-* It can look clutters if the data set is big
-* The point in the front can hide the point at the back
+* Grouping multiple lines can cause clutter and confusion
+* If one of the axes is ordered it could to be harder to interpret which one of the axes is ordered
+
+## Interactivity in VR to Enhance the Information
+
+* Animation can be used to visualize motion in space
+
+## Similar Charts/Graphs
+
+### [3D Surface Plot](./3) [3D Connected ScatterPlot] (./8)
