--- a/src/description/5.md
+++ b/src/description/5.md
@@ -1,12 +1,12 @@
-Correlation,Distribution,Identifying Outliers
+Distribution,Spacial Coordinate
 /img/cardImg/05.png
-/img/examples/05/ykkslsl.jpeg,/img/examples/05/9opOV.gif,/img/examples/05/threedscatter2.jpg,/img/examples/05/threedscatter2.png,/img/examples/05/Skærmbillede-2017-09-04-kl.-17.06.45.png
-Source: http://rgraphgallery.blogspot.fi/2013/04/rg-3d-scatter-plots-with-vertical-lines.html,Source: https://i.stack.imgur.com/9opOV.gif,Source:https://se.mathworks.com/matlabcentral/fileexchange/35288-matlab-plot-gallery-scatter-plot-3d?focused=6793187&tab=example,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: http://www.advsofteng.com/gallery_3dscatter.html,Source: http://www.doka.ch/Excel3Dscatterplot.html
-# 3D Scatter Plot
+/img/examples/05/piusa-3d-cave-03.jpg,/img/examples/05/screen-shot-2014-12-14-at-12-26-51-pm.png,/img/examples/05/imagestarmap.png
+Source: https://www.solidsmack.com/3d-cad-technology/scan-your-cave-model-it-in-modo-call-it-a-day/,Source: http://stars.chromeexperiments.com/,Source: http://sci.esa.int/star_mapper/
+# 3D Point Cloud
 
-Scatter plots are plots or diagrams which visualizes quantitative data as sets of points (these points can be any shape) in space. 3D scatter plots generally visualizes three-dimensional data; although additional data can be visualized using colours, shapes of the dot etc.
+A point cloud is a set of points in a coordinate system; hence 3D point cloud is set of point in a 3D coordinate system. 
 
-Scatter plots are one of the most common forms of visualization, and they are widely used in scientific visualization. They are mostly used to find correlations, clusters, patterns, outliers, and trends in the dataset. 
+Traditionally point cloud in a 3D coordinate system has been used to visualize the external surface of an object, but in data visualization, it can also be used to visualize point or position of one or many objects in space.
 
 ## Input
 
@@ -17,21 +17,24 @@ Scatter plots are one of the most common forms of visualization, and they are wi
 28 | 32 | 36
 40 | 44 | 48
 
-## Pros and Cons of 3D Scatter Plot
+## Visualization of Additional Datatype in Point Cloud
+
+* __Size__ of the point can be used to display a quantitative attribute of the object
+* __Colour__ of the point can be used to display an additional quantitative or categorical attribute of the object
+* __3D model__ of the object can be used instead of a point or sphere or random shape
+
+_One of the common application of point cloud in data visualization is for creating a map of stars and planets and to identify their orbits._
+
+## Pros and Cons of 3D Point Cloud
 
 __Pros__
-* Easy to understand
-* Easy to identify correlations, clusters, patterns, outliers, and trends in the dataset
-* Additional characteristics of the points (like colours, shapes, and textures) can be used to visualize additional categorical data
+* Easy to understand as position attribute is used to represent the position
+* It is great to identify clusters
 
 __Cons__
-* For a larger dataset, the plot can get cluttered and messy
-* Overlapping data point can cause occlusion (opacity can be used to solve this problem)
-* Aspect ratio of the graph can greatly affect the interpretation of the data 
+* It can look clutters if the data set is big
+* The point in the front can hide the point at the back
 
-## Interactivity in VR to Enhance the Information
+## Similar Charts/Graphs
 
-* Adding droplines can help in visualizing the position of points in space
-* Adding projections of the points in different planes help in visualizing correlations between bivariate data
-* Animation can be used to add a time as an additional dimension
-
+### [3D Scatter Plot](./6) [3D Bubble Chart] (./7)
