--- a/src/description/6.md
+++ b/src/description/6.md
@@ -1,30 +1,30 @@
 Correlation,Distribution,Identifying Outliers
 /img/cardImg/06.png
-/img/examples/06/Chart_About_3D_Bubble_Charts.png,/img/examples/06/images.jpeg,/img/examples/06/3D_Scatter_with_Colormap.png
-Source: http://help.infragistics.com/Help/Doc/WinForms/2011.2/CLR2.0/html/Chart_Working_with_3D_Bubble_Chart_Data.html,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: https://www.originlab.com/doc/Tutorials/3D-Scatter-ColorMap
-# 3D Bubble Chart
+/img/examples/06/ykkslsl.jpeg,/img/examples/06/9opOV.gif,/img/examples/06/threedscatter2.jpg,/img/examples/06/threedscatter2.png,/img/examples/06/Skærmbillede-2017-09-04-kl.-17.06.45.png
+Source: http://rgraphgallery.blogspot.fi/2013/04/rg-3d-scatter-plots-with-vertical-lines.html,Source: https://i.stack.imgur.com/9opOV.gif,Source:https://se.mathworks.com/matlabcentral/fileexchange/35288-matlab-plot-gallery-scatter-plot-3d?focused=6793187&tab=example,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: http://www.advsofteng.com/gallery_3dscatter.html,Source: http://www.doka.ch/Excel3Dscatterplot.html
+# 3D Scatter Plot
 
-Bubble chart is a variation of scatter plot; bubble chart is a scatter plot with point size representing a quantitative data type and color representing a categorical data type. 3D bubble chart generally visualizes four-dimensional data; although additional data can be visualized using colours. _2D bubble charts gained popularity after Hans Rosling's TED 2006 talk on human development trends._
+Scatter plots are plots or diagrams which visualizes quantitative data as sets of points (these points can be any shape) in space. 3D scatter plots generally visualizes three-dimensional data; although additional data can be visualized using colours, shapes of the dot etc.
+
+Scatter plots are one of the most common forms of visualization, and they are widely used in scientific visualization. They are mostly used to find correlations, clusters, patterns, outliers, and trends in the dataset. 
 
 ## Input
 
- x | y | z | r
-:-------------:| :-----:| :-----:| :-----:| 
-4 | 8 | 12 | 8
-16 | 20 | 24 | 16 
-28 | 32 | 36 | 24
-40 | 44 | 48 | 32
+ x | y | z | 
+:-------------:| :-----:| :-----:| 
+4 | 8 | 12
+16 | 20 | 24
+28 | 32 | 36
+40 | 44 | 48
 
-## Pros and Cons of 3D Bubble Chart
+## Pros and Cons of 3D Scatter Plot
 
 __Pros__
-* An additional data type is visualized using the size of the point
 * Easy to understand
 * Easy to identify correlations, clusters, patterns, outliers, and trends in the dataset
+* Additional characteristics of the points (like colours, shapes, and textures) can be used to visualize additional categorical data
 
 __Cons__
-* Because of the depth perception; the size of the point can be misinterpreted
-* Different shapes cannot be used for points as it is hard to compare sizes of different shapes
 * For a larger dataset, the plot can get cluttered and messy
 * Overlapping data point can cause occlusion (opacity can be used to solve this problem)
 * Aspect ratio of the graph can greatly affect the interpretation of the data 
@@ -35,3 +35,6 @@ __Cons__
 * Adding projections of the points in different planes help in visualizing correlations between bivariate data
 * Animation can be used to add a time as an additional dimension
 
+## Similar Charts/Graphs
+
+### [3D Point Cloud](./5) [3D Bubble Chart] (./7) [3D Connected Scatterplot] (./8)
