--- a/src/description/7.md
+++ b/src/description/7.md
@@ -1,35 +1,40 @@
-Patterns,Trends Over Time
+Correlation,Distribution,Identifying Outliers
 /img/cardImg/07.png
-/img/examples/07/SplinePath3DPoints.png,/img/examples/07/x-y-z-scatter-plot-8.png
-Source: https://ilnumerics.net/Examples/Spline_path_through_3D_points/SplinePath3DPoints.png,Source: https://www.unistat.com/guide/x-y-z-scatter-plot/
-# 3D Connected Scatterplot
+/img/examples/07/Chart_About_3D_Bubble_Charts.png,/img/examples/07/images.jpeg,/img/examples/07/3D_Scatter_with_Colormap.png
+Source: http://help.infragistics.com/Help/Doc/WinForms/2011.2/CLR2.0/html/Chart_Working_with_3D_Bubble_Chart_Data.html,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: https://www.originlab.com/doc/Tutorials/3D-Scatter-ColorMap
+# 3D Bubble Chart
 
-A connected scatterplot is a combination scatter plot and line graph/contour. 3D connected scatterplot maps three values onto a 3D Cartesian plane, with one time
-series represented on the __x axes__, the other on the __y__ and another on the __z axes__. A line is drawn to connect the points in temporal order. 2D version of connected scatter plot is mostly used in journalism and one of its first use in news graphics was [Oil’s Roller Coaster Ride by Amanda Cox for The New York Times in February 2008](http://www.nytimes.com/interactive/2008/02/19/business/20080220_CENTURY_GRAPHIC.html?src=tp).
-
-Connected scatterplots can contain two particularly interesting features: __L-shapes__ and __loops__.
-* __L-shape__ feature represents sudden changes in the relationship between the three time series; for example, an L appears when one variable remains constant while the others are changing or when two variable remains constant while the other is changing.
-* __Loops__ occur whenever a local peak and valley pair (local maxima and local minima) occurs at different times in each series.
-
-_A connected scatterplot can only be drawn when the time series are sampled at the same rate; for example, all the time series should be sampled yearly._
+Bubble chart is a variation of scatter plot; bubble chart is a scatter plot with point size representing a quantitative data type and color representing a categorical data type. 3D bubble chart generally visualizes four-dimensional data; although additional data can be visualized using colours. _2D bubble charts gained popularity after Hans Rosling's TED 2006 talk on human development trends._
 
 ## Input
 
-Year / Time | x | y | z | 
-:-------------:| :-----:| :-----:|:-----:| 
-2000 | 4 | 8 | 12
-2001 | 16 | 20 | 24
-2002 | 28 | 32 | 36
-2003 | 40 | 44 | 48
+ x | y | z | r
+:-------------:| :-----:| :-----:| :-----:| 
+4 | 8 | 12 | 8
+16 | 20 | 24 | 16 
+28 | 32 | 36 | 24
+40 | 44 | 48 | 32
 
-## Pros and Cons of 3D Contour
+## Pros and Cons of 3D Bubble Chart
 
 __Pros__
-* It is great to identify correlations between multiple time series
-* L-shape and loops can help give insights which otherwise would be really hard to notice
+* An additional data type is visualized using the size of the point
+* Easy to understand
+* Easy to identify correlations, clusters, patterns, outliers, and trends in the dataset
 
 __Cons__
-* It a novel visualization so might require some time for the user to understand
-* Sometimes connected scatterplot can create complex shapes that can be hard to interpret
-* If arrows are missing; it might be harder for the user to figure out the order and direction
-* The importance of L-shapes and loops might not be evident to the user
+* Because of the depth perception; the size of the point can be misinterpreted
+* Different shapes cannot be used for points as it is hard to compare sizes of different shapes
+* For a larger dataset, the plot can get cluttered and messy
+* Overlapping data point can cause occlusion (opacity can be used to solve this problem)
+* Aspect ratio of the graph can greatly affect the interpretation of the data 
+
+## Interactivity in VR to Enhance the Information
+
+* Adding droplines can help in visualizing the position of points in space
+* Adding projections of the points in different planes help in visualizing correlations between bivariate data
+* Animation can be used to add a time as an additional dimension
+
+## Similar Charts/Graphs
+
+### [3D Point Cloud](./5) [3D Scatter Plot] (./6)
