--- a/src/description/8.md
+++ b/src/description/8.md
@@ -1,38 +1,39 @@
-Relationships,Clustering
+Patterns,Trends Over Time
 /img/cardImg/08.png
-/img/examples/08/687474703a2f2f676973742e6769746875622e636f6d2f76617374757269616e6f2f39373263613466336538653037346461636631346437303731616164386566392f7261772f707265766965772e706e67.png,/img/examples/08/as-network-CA.png,/img/examples/08/maxresdefault.jpg
-Source: https://github.com/vasturiano/d3-force-3d,Source: https://www.youtube.com/watch?v=9Ekp1BcvQDI,Source: https://www.youtube.com/watch?v=JsEm-CDj4qM
-# 3D Graph Drawing
+/img/examples/08/SplinePath3DPoints.png,/img/examples/08/x-y-z-scatter-plot-8.png
+Source: https://ilnumerics.net/Examples/Spline_path_through_3D_points/SplinePath3DPoints.png,Source: https://www.unistat.com/guide/x-y-z-scatter-plot/
+# 3D Connected Scatterplot
 
-In graph theory in mathematics, a graph is a structure formed by vertices and edges; where vertices represent a set of objects and edges represent the relationship between these objects. Graph Drawings are mostly used to visualize relationships (e.g. social networks). Visualizing a graph can help identify hidden relationships and interesting patterns.
+A connected scatterplot is a combination scatter plot and line graph/contour. 3D connected scatterplot maps three values onto a 3D Cartesian plane, with one time
+series represented on the __x axes__, the other on the __y__ and another on the __z axes__. A line is drawn to connect the points in temporal order. 2D version of connected scatter plot is mostly used in journalism and one of its first use in news graphics was [Oil’s Roller Coaster Ride by Amanda Cox for The New York Times in February 2008](http://www.nytimes.com/interactive/2008/02/19/business/20080220_CENTURY_GRAPHIC.html?src=tp).
+
+Connected scatterplots can contain two particularly interesting features: __L-shapes__ and __loops__.
+* __L-shape__ feature represents sudden changes in the relationship between the three time series; for example, an L appears when one variable remains constant while the others are changing or when two variable remains constant while the other is changing.
+* __Loops__ occur whenever a local peak and valley pair (local maxima and local minima) occurs at different times in each series.
+
+_A connected scatterplot can only be drawn when the time series are sampled at the same rate; for example, all the time series should be sampled yearly._
 
 ## Input
 
-| | Node 1 | Node 2 | Node 3 | Node 4
-:-------------:| :-----:| :-----:|:-----:| :-----:| 
-Node 1 |  | ✔ | ✔ | ✔ 
-Node 2 | ✔ |  |  | |
-Node 3 | ✔ |  |  | ✔
-Node 4 | ✔ |  | ✔ | |
+Year / Time | x | y | z | 
+:-------------:| :-----:| :-----:|:-----:| 
+2000 | 4 | 8 | 12
+2001 | 16 | 20 | 24
+2002 | 28 | 32 | 36
+2003 | 40 | 44 | 48
 
-## Visualization of Additional Datatype in Graph Drawing
-
-* __Size__ of the vertices can be used to display a quantitative attribute of the noded
-* __Colour__ of the vertices can be used to display an additional nominal or ordinal attribute of the nodes
-* __Width__ of the edges can be used to display a quantitative attribute of the link
-* __Colour__ of the edges can be used to display an additional nominal or ordinal attribute of the link
-
-## Pros and Cons of 3D Graph Drawing
+## Pros and Cons of 3D Connected Scatterplot
 
 __Pros__
-* Good for visualizing relationships
-* In VR because of an unlimited amount of space can help in reducing cluttering
+* It is great to identify correlations between multiple time series
+* L-shape and loops can help give insights which otherwise would be really hard to notice
 
 __Cons__
-* Different drawing algorithm can affect the interpretation
-* Can look cluttered if the amount of node and edges are large
+* It a novel visualization so might require some time for the user to understand
+* Sometimes connected scatterplot can create complex shapes that can be hard to interpret
+* If arrows are missing; it might be harder for the user to figure out the order and direction
+* The importance of L-shapes and loops might not be evident to the user
 
-## Interactivity in VR to Enhance the Information
+## Similar Charts/Graphs
 
-* Zooming can help in viewing the overview
-* Highlighting only the related nodes and edges on mouseover on a specific node can help in highlighting and identifying relationships
+### [3D Contour](./4) [3D Scatterplot] (./6)
