--- a/src/description/9.md
+++ b/src/description/9.md
@@ -1,35 +1,42 @@
-Comparison,Geospatial Data,Magnitude
+Relationships,Clustering
 /img/cardImg/09.png
-/img/examples/09/3D_Bar_on_Flatten_Surface.png,/img/examples/09/7baa46e027455c02faa99b9443256db6.jpg,/img/examples/09/deckgl.png,/img/examples/09/allenkey.gif,/img/examples/09/bar_chart_3d_maps.png
-Source: https://www.originlab.com/index.aspx?go=products/origin/graphing,Source: http://content.time.com/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/geojson-layer,Source: https://eng.uber.com/data-viz-intel/,Source: http://globe.chromeexperiments.com/
-# 3D Bar Map Chart
+/img/examples/09/687474703a2f2f676973742e6769746875622e636f6d2f76617374757269616e6f2f39373263613466336538653037346461636631346437303731616164386566392f7261772f707265766965772e706e67.png,/img/examples/09/as-network-CA.png,/img/examples/09/maxresdefault.jpg
+Source: https://github.com/vasturiano/d3-force-3d,Source: https://www.youtube.com/watch?v=9Ekp1BcvQDI,Source: https://www.youtube.com/watch?v=JsEm-CDj4qM
+# 3D Graph Drawing
 
-Bar Map Chart is simply a combination of a bar chart and a map; with the bars placed on the location whose value they represent. Like a bar chart, the height of each bar is scaled to represent a quantitative data. The map could be a map of the world, a country, city or even a spatial map of a room.
-
-If the map used is planar projection then the map should be placed on the __xz plane__ i.e. the floor and the bars should rise on the __y axes__.
+In graph theory in mathematics, a graph is a structure formed by vertices and edges; where vertices represent a set of objects and edges represent the relationship between these objects. Graph Drawings are mostly used to visualize relationships (e.g. social networks). Visualizing a graph can help identify hidden relationships and interesting patterns.
 
 ## Input
 
-Location / Country | Value 
-:-------------:| :-----:|  
-Location 1 | 8 
-Location 2 | 20 
-Location 3 | 32 
-Location 4 | 44 
+| | Node 1 | Node 2 | Node 3 | Node 4
+:-------------:| :-----:| :-----:|:-----:| :-----:| 
+Node 1 |  | ✔ | ✔ | ✔ 
+Node 2 | ✔ |  |  | |
+Node 3 | ✔ |  |  | ✔
+Node 4 | ✔ |  | ✔ | |
 
-## Pros and Cons of 3D Bar Chart
+## Visualization of Additional Datatype in Graph Drawing
+
+* __Size__ of the vertices can be used to display a quantitative attribute of the noded
+* __Colour__ of the vertices can be used to display an additional nominal or ordinal attribute of the nodes
+* __Width__ of the edges can be used to display a quantitative attribute of the link
+* __Colour__ of the edges can be used to display an additional nominal or ordinal attribute of the link
+
+## Pros and Cons of 3D Graph Drawing
 
 __Pros__
-* It is a great tool to combine geospatial data with quantitative data
-* In VR the user can walk around on the map and because of infinitely big canvas size the map could be of a very large size
-* In case of the map of the room actual dimensions can be used
+* Good for visualizing relationships
+* In VR because of an unlimited amount of space can help in reducing cluttering
 
 __Cons__
-* Maps get hidden if there is a high density of bars
-* Smaller countries and bars can be hidden behind larger bars
-* If the map used is a globe; it gets harder to compare the height of the bars coming out of the bars
+* Different drawing algorithm can affect the interpretation
+* Can look cluttered if the amount of node and edges are large
 
-## Variations
+## Interactivity in VR to Enhance the Information
 
-* Choropleth map bars
-* Map with stacked bar chart
+* Zooming can help in viewing the overview
+* Highlighting only the related nodes and edges on mouseover on a specific node can help in highlighting and identifying relationships
+
+## Similar Charts/Graphs
+
+### [3D Flow Map](./11)
